--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: train, local: true) do |form| %>
   <% if train.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(train.errors.count, "error") %> prohibited this train from being saved:</h2>
+      <h2><%= pluralize(train.errors.count, "error") %> prohibited this railsway_station from being saved:</h2>
 
       <ul>
       <% train.errors.full_messages.each do |message| %>
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :number %>
-    <%= form.number_field :number, id: :train_number %>
+    <%= form.text_field :number, id: :train_number %>
   </div>
 
   <div class="actions">
