--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -1,11 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Trains</h1>
+<h1>Trains#index</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Number</th>
+      <th>Title</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,10 +16,7 @@
         <td><%= link_to 'Edit', edit_train_path(train) %></td>
         <td><%= link_to 'Destroy', train, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Train', new_train_path %>
