--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <%= render "layouts/nav" %>
   <body>
     <%= yield %>
   </body>
+  <%= render "layouts/footer" %>
 </html>
