--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -1,19 +1,14 @@
 <%= form_with(model: route, local: true) do |form| %>
-  <% if route.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(route.errors.count, "error") %> prohibited this railsway_station from being saved:</h2>
-
-      <ul>
-      <% route.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'common/errors', resource: route %>
 
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name, id: :route_name %>
+  </div>
+
+  <div class="field">
+    <%= form.label :railway_station_ids, 'Current stations:' %>
+    <%= form.collection_select :railway_station_ids, RailwayStation.all, :id, :title, {}, { multiple: true }  %>
   </div>
 
   <div class="actions">
