--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -9,14 +9,9 @@
   </thead>
 
   <tbody>
-    <% @routes.each do |route| %>
-      <tr>
-        <td><%= route.name %></td>
-        <td><%= link_to 'Show', route %></td>
-        <td><%= link_to 'Edit', edit_route_path(route) %></td>
-        <td><%= link_to 'Destroy', route, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-      </tr>
-    <% end %>
+    <%= render @routes %>
   </tbody>
 </table>
+
+
+<%= link_to 'New route', new_route_path %>
