--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -9,14 +9,10 @@
   </thead>
 
   <tbody>
-    <% @trains.each do |train| %>
-      <tr>
-        <td><%= train.number %></td>
-        <td><%= link_to 'Show', train %></td>
-        <td><%= link_to 'Edit', edit_train_path(train) %></td>
-        <td><%= link_to 'Destroy', train, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-      </tr>
-    <% end %>
+    <%= render @trains %>
   </tbody>
 </table>
+
+<br>
+
+<%= link_to 'New train', new_train_path %>
