--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,4 +3,5 @@
     <li><%= link_to "Trains", trains_path %></li>
     <li><%= link_to "Routes", routes_path %></li>
     <li><%= link_to "Railway Stations", railway_stations_path %></li>
+    <li><%= link_to "Carrigae", carriages_path %></li>
 </ul>
