--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -14,7 +14,7 @@
     Any stations here
   <% else %>
     <ul>
-      <% @route.railway_stations.each do |station| %>
+      <% @route.railway_stations.ordered.each do |station| %>
         <li> <%= station.title %>  </li>
       <% end %>
     </ul>
