--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -42,6 +42,6 @@
 <br> 
 
 
-<%= link_to 'Add carriage', new_carriage_path(train_id: @train) %> |
+<%= link_to 'Add carriage', new_train_carriage_path(@train) %> |
 <%= link_to 'Edit', edit_train_path(@train) %> |
 <%= link_to 'Back', trains_path %>
