Finish lesson 16 - Search and Buy ticket functionality

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,4 +4,5 @@
     <li><%= link_to "Routes", routes_path %></li>
     <li><%= link_to "Railway Stations", railway_stations_path %></li>
     <li><%= link_to "Carrigae", carriages_path %></li>
+    <li><%= link_to "Search", search_path %></li>
 </ul>
