--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,6 +51,13 @@
     text-decoration: none;
 }
 
+.nav li p {
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+
 /* Change the link color to #111 (black) on hover */
 .nav li a:hover {
     background-color: #111;
