--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -1,6 +1,7 @@
 <tr>
   <td><%= ticket.id %></td>
   <td><%= ticket.user.id %></td>
+  <td><%= ticket.user.email %></td>
   <td><%= ticket.user_first_name %></td>
   <td><%= ticket.user_last_name %></td>
   <td><%= ticket.user_middle_name %></td>
