--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Tickets</h1>
 
 <table>
@@ -7,6 +5,7 @@
   <tr>
     <th>Ticket id | </th>
     <th>User | </th>
+    <th>User email | </th>
     <th>User name | </th>
     <th>User last name | </th>
     <th>User middle name | </th>
