--- a/app/views/admin/carriages/_form.html.erb
+++ b/app/views/admin/carriages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@train, @carriage.becomes(Carriage)]) do |form| %>
+<%= form_for([:admin, @train, @carriage.becomes(Carriage)]) do |form| %>
    <% if @carriage.errors.any? %>
      <div id="error_explanation">
        <h2><%= pluralize(carriage.errors.count, "error") %> prohibited this carriage from being saved:</h2>
