--- a/app/views/admin/railway_stations/_form.html.erb
+++ b/app/views/admin/railway_stations/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: railway_station, local: true) do |form| %>
-<%= render 'common/errors', resource: railway_station %>
+<%= form_for(:admin,  @railway_station) do |form| %>
+<%= render 'common/errors', resource: @railway_station %>
 
   <div class="field">
     <%= form.label :title %>
