--- a/app/views/admin/railway_stations/edit.html.erb
+++ b/app/views/admin/railway_stations/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Railway Station</h1>
 
-<%= render 'form', railway_station: @railway_station %>
+<%= render 'form' %>
 
-<%= link_to 'Show', @railway_station %> |
+<%= link_to 'Show', [:admin, @railway_station] %> |
 <%= link_to 'Back', admin_railway_stations_path %>
