--- a/app/views/admin/routes/edit.html.erb
+++ b/app/views/admin/routes/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', route: @route %>
 
 <%= link_to 'Show', @route %> |
-<%= link_to 'Back', routes_path %>
+<%= link_to 'Back', admin_routes_path %>
