--- a/app/views/admin/routes/show.html.erb
+++ b/app/views/admin/routes/show.html.erb
@@ -68,5 +68,5 @@
   <% end %>
 </p>
 
-<%= link_to 'Edit', edit_route_path(@route) %> |
-<%= link_to 'Back', routes_path %>
+<%= link_to 'Edit', admin_edit_route_path(@route) %> |
+<%= link_to 'Back', admin_routes_path %>
