--- a/app/views/admin/trains/edit.html.erb
+++ b/app/views/admin/trains/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Train</h1>
 
-<%= render 'form', train: @train %>
+<%= render 'form'%>
 
-<%= link_to 'Show', @train %> |
-<%= link_to 'Back', trains_path %>
+<%= link_to 'Show', [:admin, @train] %> |
+<%= link_to 'Back', admin_trains_path %>
