--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -6,4 +6,6 @@
   <td><%= ticket.user_last_name %></td>
   <td><%= ticket.user_middle_name %></td>
   <td><%= ticket.user_passport %></td>
+  <td><%= link_to 'Show', ticket %></td>
+  <td><%= link_to 'Destroy', ticket, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
