--- a/app/views/admin/carriages/index.html.erb
+++ b/app/views/admin/carriages/index.html.erb
@@ -1,14 +1,14 @@
- <h1>Carriages</h1>
+ <h1><%= t('admin.carriages.index.title')%></h1>
  
  <table>
    <thead>
      <tr>
-       <th>Id | </th>
-       <th>Type of Carriage | </th>
-       <th>Top Place | </th>
-       <th>Bottom Places | </th>
-       <th>Train Number | </th>
-       <th>Carriage Number | </th>
+       <th><%= t('admin.carriages.form.id')%> | </th>
+       <th><%= t('admin.carriages.form.carriage_type')%> | </th>
+       <th><%= t('admin.carriages.form.top_places')%> | </th>
+       <th><%= t('admin.carriages.form.bottom_places')%> | </th>
+       <th><%= t('admin.carriages.form.train_number')%> | </th>
+       <th><%= t('admin.carriages.form.carriage_number')%> | </th>
        <th colspan="3"></th>
      </tr>
    </thead>
