--- a/app/views/admin/carriages/_carriage.html.erb
+++ b/app/views/admin/carriages/_carriage.html.erb
@@ -6,7 +6,8 @@
   <td><%= carriage.train.number %></td>
   <td><%= carriage.number %></td>
   <td>
-    <%= link_to 'Show', carriage_path(carriage.id) %>
-    <%= link_to 'Edit', edit_carriage_path(carriage) %>
-    <%= link_to 'Destroy', carriage_path(carriage.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <%= link_to t('common.show'), admin_carriage_path(carriage.id) %>
+    <%= link_to t('common.edit'), edit_admin_carriage_path(carriage) %>
+    <%= link_to t('common.delete'), admin_carriage_path(carriage.id), method: :delete, data: { confirm: t('common.delete_question') } %>
+  </td>
 </tr>
