--- a/app/views/admin/routes/_route.html.erb
+++ b/app/views/admin/routes/_route.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= route.name %></td>
-  <td><%= link_to 'Show', [:admin, route] %></td>
-  <td><%= link_to 'Edit', admin_edit_route_path(route) %></td>
-  <td><%= link_to 'Destroy', [:admin, route], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to t('common.show'), [:admin, route] %></td>
+  <td><%= link_to t('common.edit'), edit_admin_route_path(route) %></td>
+  <td><%= link_to t('common.delete'), [:admin, route], method: :delete, data: { confirm: t('common.delete_question') } %></td>
 </tr>
