--- a/app/views/admin/trains/_form.html.erb
+++ b/app/views/admin/trains/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:admin, @train) do |form| %>
+<%= form_for([:admin, @train]) do |form| %>
 <%= render 'common/errors', resource: @train %>
 
   <div class="field">
@@ -18,6 +18,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit t('admin.trains.form.submit') %>
   </div>
 <% end %>
