--- a/app/views/admin/trains/_train.html.erb
+++ b/app/views/admin/trains/_train.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= train.number %></td>
-  <td><%= link_to 'Show', train %></td>
-  <td><%= link_to 'Edit', edit_train_path(train) %></td>
-  <td><%= link_to 'Destroy', train, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to t('common.show'), admin_train_path(train) %></td>
+  <td><%= link_to t('common.edit'), edit_admin_train_path(train) %></td>
+  <td><%= link_to t('common.delete'), admin_train_path(train), method: :delete, data: { confirm: t('common.delete_question') } %></td>
 </tr>
