--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,10 @@
-<h2>Sign up</h2>
+<h2><%= t('devise.sign_up.title') %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email, t('devise.login.email') %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
@@ -19,15 +19,15 @@
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :passwordt, t('devise.login.password') %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %>  <%= t('devise.sign_up.minimal_characters')%>)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, t('devise.sign_up.password_confirmation') %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
