--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
  <footer id = 'footer'>
-  <p>Created by: Egor T</p>
-  <p>Contact information: <%= link_to "GitHub egor-t", "https://github.com/egor-t" %> </p>
+  <p><%=t('footer.creator') %>: Egor T</p>
+  <p><%=t('footer.contacts') %>: <%= link_to "GitHub egor-t", "https://github.com/egor-t" %> </p>
 </footer> 
