--- a/app/views/admin/trains/show.html.erb
+++ b/app/views/admin/trains/show.html.erb
@@ -38,6 +38,6 @@
 <br> 
 
 
-<%= link_to t('admin.carraiges.new.add_carriage'), new_admin_train_carriage_path(@train) %> |
+<%= link_to t('admin.carriages.new.add_carriage'), new_admin_train_carriage_path(@train) %> |
 <%= link_to t('common.edit'), edit_admin_train_path(@train) %> |
 <%= link_to t('common.back'), admin_trains_path %>
