--- a/app/views/admin/carriages/new.html.erb
+++ b/app/views/admin/carriages/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Carriage</h1>
+<h1><%= t('admin.carriages.new.new_carriage')%></h1>
 
 <%= render 'form'%>
-
-<%= link_to 'Back', carriages_path %>
+</br>
+<%= link_to 'Back', admin_carriages_path %>
