--- a/app/views/admin/railway_stations/_form.html.erb
+++ b/app/views/admin/railway_stations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:admin,  @railway_station) do |form| %>
+<%= form_for([:admin,  @railway_station]) do |form| %>
 <%= render 'common/errors', resource: @railway_station %>
 
   <div class="field">
@@ -7,6 +7,10 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <% if @railway_station.new_record? %>
+      <%= form.submit t('common.submit') %>
+    <% else %>
+      <%= form.submit t('common.update') %>
+    <% end %>
   </div>
 <% end %>
