--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,15 +1,15 @@
-<h1>Tickets</h1>
+<h1><%= t('public.tickets.index.title') %></h1>
 
 <table>
   <thead>
   <tr>
-    <th>Ticket id | </th>
-    <th>User | </th>
-    <th>User email | </th>
-    <th>User name | </th>
-    <th>User last name | </th>
-    <th>User middle name | </th>
-    <th>User passport </th>
+    <th><%= t('public.tickets.table.ticket_id') %> | </th>
+    <th><%= t('public.tickets.table.user')%> | </th>
+    <th><%= t('public.tickets.table.user_email')%> | </th>
+    <th><%= t('public.tickets.table.user_name')%> | </th>
+    <th><%= t('public.tickets.table.user_last_name')%> | </th>
+    <th><%= t('public.tickets.table.user_middle_name')%> | </th>
+    <th><%= t('public.tickets.table.user_passport')%> </th>
   </tr>
   </thead>
 
