--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,41 @@
-<h2><%= t('devise.sign_up.title') %></h2>
+<div class="border-form-div">
+  <h2><%= t('devise.sign_up.title') %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email, t('devise.login.email') %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :email, t('devise.login.email') %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :first_name, t('devise.login.first_name') %><br />
+      <%= f.text_field :first_name, autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :last_name, t('devise.login.last_name') %><br />
+      <%= f.text_field :last_name, autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :passwordt, t('devise.login.password') %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %>  <%= t('devise.sign_up.minimal_characters')%>)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :passwordt, t('devise.login.password') %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %>  <%= t('devise.sign_up.minimal_characters')%>)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, t('devise.sign_up.password_confirmation') %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation, t('devise.sign_up.password_confirmation') %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="actions">
+      <%= f.submit t('devise.sign_up.submit') %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
