--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,28 +1,44 @@
-<h1><%= t('public.search.index.title') %></h1>
-
-<%= form_tag search_path, method: :get do %>
-  <%= select_tag :arrival_station, options_from_collection_for_select(@stations, :id, :title) %>
-  <%= select_tag :departure_station, options_from_collection_for_select(@stations, :id, :title) %>
-  <%= submit_tag t('public.search.buttons.find') %>
-<% end %>
+<div class = 'choose-routes'>
+  <h1><%= t('public.search.index.title') %></h1>
+  <%= form_tag search_path, method: :get do %>
+    <%= select_tag :arrival_station, options_from_collection_for_select(@stations, :id, :title) %>
+    <%= select_tag :departure_station, options_from_collection_for_select(@stations, :id, :title) %>
+    <%= submit_tag t('public.search.buttons.find') %>
+  <% end %>
+</div>
 
 <% if @routes %>
-  <% @routes.each do |route| %>
-    <div>
-      <% route.railway_stations.each do |station| %>
-        <p><%= "#{t('public.search.show.name')} : #{station.title}"%> </p>
-        <p><%= "#{t('public.search.show.arrival')} : #{station.arrival_time(route)}"%> </p>
-        <p><%= "#{t('public.search.show.departure')} : #{station.departure_time(route)}"%> </p>
-      <% end %>
-    </div>
-    <br>
-    <% route.trains.each do |train| %>
-      Train: <%= train.number %><br/>
-      Arrival: <%= train.route.railway_stations_routes.last.arrival_time %><br/>
-      Departure: <%= train.route.railway_stations_routes.first.departure_time %><br/>
-      <p><%= link_to t('public.search.buttons.buy_ticket'), new_train_ticket_path(train, arrival_station: route.railway_stations.first,
-                                                              departure_station: route.railway_stations.last) %></p>
-    <% end %>
-    <hr>
-  <% end %> 
+  <h3><%=" #{t('admin.routes.show.title')}: #{@routes.first.name}"%> </h3>
+  <table class="table table-striped table-bordered table-condensed">
+    <thead>
+      <tr>
+        <th><%= t('public.search.show.name')%></th>
+        <th><%= t('public.search.show.arrival')%></th>
+        <th><%= t('public.search.show.departure')%></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @routes.each do |route| %>
+        <% if route.trains.count.positive? %>
+          <% route.railway_stations.each do |station| %>
+            <tr>
+              <td><%= station.title %></td>
+              <td><%= station.arrival_time(route).strftime("%d.%m - %H:%M") if station.arrival_time(route) %></td>
+              <td><%= station.departure_time(route).strftime("%d.%m - %H:%M") if station.departure_time(route) %></td>
+            </tr>
+          <% end %>
+          <tr>  
+            <td colspan="3">
+              <% route.trains.each do |train| %>
+                <%=" #{t('admin.trains.index.number')}: #{train.number}" %>
+                <p><%= link_to t('public.search.buttons.buy_ticket'), new_train_ticket_path(train, arrival_station: route.railway_stations.first,
+                                                                        departure_station: route.railway_stations.last) if user_signed_in? %></p>
+                <hr>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      <% end %> 
+    <tbody>
+  </table>  
 <% end %>
