--- a/app/views/admin/trains/_form.html.erb
+++ b/app/views/admin/trains/_form.html.erb
@@ -1,5 +1,6 @@
-<%= form_for([:admin, @train]) do |form| %>
-<%= render 'common/errors', resource: @train %>
+<% hidden = false unless local_assigns[:hidden] %>
+<%= form_for([:admin, train], html: { style: "display: #{hidden ? 'none' : 'block'}" }) do |form| %>
+<%= render 'common/errors', resource: train %>
 
   <div class="field">
     <%= form.label :number %>
