--- a/app/views/admin/routes/_route.html.erb
+++ b/app/views/admin/routes/_route.html.erb
@@ -1,6 +1,8 @@
 <tr>
-  <td><%= route.name %></td>
+  <td><div id="route_title_<%=route.id%>"><%= route.name %></div>
+    <%= render 'form', route: route, hidden: true %>
+  </td>
   <td><%= link_to t('common.show'), [:admin, route] %></td>
-  <td><%= link_to t('common.edit'), edit_admin_route_path(route) %></td>
+  <td><%= link_to t('common.edit'), '', class: 'edit_route', data: { route_id: route.id }  %></td>
   <td><%= link_to t('common.delete'), [:admin, route], method: :delete, data: { confirm: t('common.delete_question') } %></td>
 </tr>
