--- a/app/views/admin/trains/_train.html.erb
+++ b/app/views/admin/trains/_train.html.erb
@@ -1,6 +1,8 @@
 <tr>
-  <td><%= train.number %></td>
+  <td><div id="train_title_<%=train.id%>"><%= train.number %></div>
+    <%= render 'form', train: train, hidden: true %>
+  </td>
   <td><%= link_to t('common.show'), admin_train_path(train) %></td>
-  <td><%= link_to t('common.edit'), edit_admin_train_path(train) %></td>
+  <td><%= link_to t('common.edit'), '', class: 'edit_train', data: { train_id: train.id }  %></td>
   <td><%= link_to t('common.delete'), admin_train_path(train), method: :delete, data: { confirm: t('common.delete_question') } %></td>
 </tr>
